@startuml

title US010 \n As an Administrator, I want to import geographical areas and sensors from a JSON file.
skinparam titleBorderRoundCorner 10
skinparam titleBorderThickness 2
skinparam titleBorderColor indianred
skinparam titleBackgroundColor ivory
skinparam FontName verdana
skinparam titleFontSize 10


skinparam class {
  BorderColor indianred
  BackgroundColor indianred
  BackgroundColor ivory
   roundcorner 10
   ArrowFontName Verdana
   ArrowColor indianred
   ArrowFontColor darkslategrey
   FontSize 12
}

class GASettingsController
class GASettingsUI
class Mapper
class GeographicArea
class Sensor
class InputUtils

MainUI -- GASettingsUI : >
GASettingsUI -- InputUtils : >
GASettingsUI -- GASettingsController : >
GASettingsController -- Mapper : >
Mapper -- GeographicArea : >
Mapper -- Sensor : >
GASettingsController -- GeographicArea : >


class GASettingsUI {
runUS10();
}

class GASettingsController {
deactivateSensor(geographicAreaList, sensorDTO, geographicAreaDTO)
}

class Mapper {
geoAreaToDTO();
geoAreaDTOToObject();
sensorToDTO();
sensorDTOToObject();
}

class GeographicArea{
getElementsAsArray()
getName()
add(sensor);
}

class InputUtils{
getGeographicAreaByList(geographicAreaList);
getInputSensorByList(SensorList);
}

class Sensor {
deactivateSensor();
isActive();
}


@enduml